Fix Navbar Add Junta and Fisio

--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -17,7 +17,9 @@
 
 /* Alejo
 ====================================*/
-
+.centrar {
+	text-align: center;
+}
 
 
 /* =================================================================== */
