--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -21,7 +21,30 @@
 	text-align: center;
 }
 
+.imagenjunta {
+	margin: 0px auto;
+}
 
+.significadoermita strong {
+	color: #bfa980;
+	font-weight: bold;
+	font-size: 18px;
+}
+.significadoermita li {
+	padding-bottom: 10px;
+	font-size: 16px;
+}
+
+.significadoermita ul li:before {
+	content: "";
+	font-family: "FontAwesome";
+	font-size: 13px;
+	color: #ccc;
+}
+
+.espacisimo {
+	padding-bottom: 50px;
+}
 /* =================================================================== */
 /* Header
 ====================================================================== */
